<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background" >


    <LinearLayout
        android:id="@+id/login_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/activity_login_random_image"
            android:layout_width="match_parent"
            android:layout_height="232dp"
            android:src="@mipmap/login_background0"/>

        <EditText
            android:id="@+id/activity_login_account_edit"
            android:hint="@string/account_hint"
            android:paddingLeft="15dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="5dp"
            android:inputType="text"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:singleLine="true"
            android:maxLength="11"
            android:background="@color/white"/>

        <EditText
            android:id="@+id/activity_login_password_edit"
            android:hint="@string/password_hint"
            android:paddingLeft="15dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            android:inputType="textPassword"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:singleLine="true"
            android:maxLength="15"
            android:background="@color/white"/>

        <Button
            android:id="@+id/activity_login_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:background="@color/button_background" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="left"
            android:paddingLeft="10dp"
            android:text="@string/can_not_login"/>

        <TextView
            android:id="@+id/activity_login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:paddingRight="10dp"
            android:text="@string/register"/>
    </LinearLayout>
</LinearLayout>