<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <TextView
            android:id="@+id/main_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/comment"
            android:textColor="@color/white"
            android:textSize="23sp"/>
    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/background_stroke_top">

        <RelativeLayout
            android:id="@+id/main_comment_layout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/main_comment_image"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@mipmap/comment_unselected"/>
                <TextView
                    android:id="@+id/main_comment_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comment"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="3dp"
                    android:textColor="@color/text_normal"/>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/main_friends_layout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/main_friends_image"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@mipmap/friends_unselected"/>
                <TextView
                    android:id="@+id/main_friends_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friends"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="3dp"
                    android:textColor="@color/text_normal"/>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/main_update_layout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/main_update_image"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@mipmap/update_unselected"/>
                <TextView
                    android:id="@+id/main_update_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="3dp"
                    android:textColor="@color/text_normal"/>
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>